# tecnequip-IHM_MX27_GUI

./: .cproject  .project  AplanDesbobMezanino.c  AplanMezanino.ld  AplanadoraPrensaPP.ld  CV_Integrado.sql  ColunaMezanino.ld  GtkUtils.c  GtkUtils.h  IHM  IHM.glade  IHM_SemTelaProd  Makefile.am  PrensaMezanino.ld  Sigma.ld  UpdateHostName.sh  VigaMezanino.ld  banho.c  cb_config.c  cb_debug.c  cb_log.c  cb_oper.c  coln.c  colunaN.ld  comm.c  comm.h  compila_IHM  cv.sql  cv_integrado.sql  db.cfg  defines.h  diagonal.c  gtk.rc  io.c  io.h  main.c  makefile  maq.c  maq.config  maq.h  (+12 more)
theme/gtk/Divinorum-Blue/gtk-2.0/: gtkrc
